--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ img {
 
 .container {
     width: 100%;
-    max-width: 1100px;
+    max-width: 1500px;
     padding: 0 16px;
     margin: 0 auto;
 }
@@ -195,8 +195,9 @@ img {
 
 .tasks-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 16px;
+    justify-content: center;
 }
 
 .task-card {
