--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,12 +310,14 @@ img {
 
   /* ===== Task 4 blocks ===== */
 #task4 .task4-block{
-    margin-top: 14px;
-    padding: 20px;
+    margin-top: 5px;
+    padding: 10px;
     border-radius: 12px;
     background: #f9fafb;
     box-shadow: inset 0 0 0 1px rgba(15,23,42,.06);
     text-align: left;
+    max-width: 100%;
+    
   }
   
   #task4 .task4-controls{
