--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ img {
 
 .tasks-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(3, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 16px;
     justify-content: center;
     align-items: start;
