--- a/assets/css/flex.css
+++ b/assets/css/flex.css
@@ -85,6 +85,24 @@
     from { transform: rotate(0deg); }
     to   { transform: rotate(360deg); }
   }
+  @keyframes identifier {
+    0% {
+      transform: translateX(0) scaleX(1);
+    }
+    45% {
+      transform: translateX(320px) scaleX(1);
+    }
+    50% {
+      transform: translateX(320px) scaleX(1);
+    }
+    90% {
+      transform: translateX(0) scaleX(-1);
+    }
+    100% {
+      transform: translateX(0) scaleX(1);
+    }
+  }
+  
   
   .flex-card.scene.spin.is-pressed .pinwheel{
     animation: spinWheel 0.25s linear infinite;
