--- a/assets/css/pic.css
+++ b/assets/css/pic.css
@@ -72,7 +72,7 @@
   position: absolute;
   left: 50%;
   top: 12px;
-  width: 16px;
+  width: 15px;
   height: 70px;
   background: var(--wood);
   transform: translateX(-50%);
@@ -90,8 +90,8 @@
   left:50%;
   top: 70px;
   transform: translateX(-50%);
-  width: 50px;
-  height: 30px;
+  width: 140px;
+  height: 50px;
   background: var(--wood);
   clip-path: polygon(50% 0%, 100% 100%, 0% 100%);  /* треугольная форма */
 }
@@ -155,6 +155,7 @@
     0 2px 0 rgba(0,0,0,.04);
 }
 
+
 /* Кнопка на крышке - маленький шарик сверху */
 .teapot .knob{
   position: absolute;
@@ -203,6 +204,19 @@
   border: 8px solid rgb(226, 55, 89);
   border-left: none;  /* убираю левую часть, чтобы был полукруг */
   border-radius: 100%;
+  transform: rotate(10deg);
+}
+.teapot .knob2{
+  position: absolute;
+  right: 35px;
+  top: -70px;
+  width: 30px;
+  height: 40px;
+  z-index: 1;  /* ручка за телом */
+
+  border: 8px solid rgb(226, 55, 89);
+  border-left: none;  /* убираю левую часть, чтобы был полукруг */
+  border-radius: 50%;
   transform: rotate(10deg);
 }
 
